--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -7,3 +7,12 @@ h3 {
   margin-bottom: 10rem;
   font-size: 2.5rem;
 }
+
+.img {
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 100%;
+  max-height: 100%;
+  width: 100%;
+}
