--- a/src/Components/TutorSignIn.css
+++ b/src/Components/TutorSignIn.css
@@ -20,7 +20,7 @@ body {
 }
 a {
   color: inherit;
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 .login-wrap {
@@ -41,19 +41,16 @@ a {
   padding: 90px 70px 50px 70px;
   background: rgba(40, 57, 101, 0.9);
 }
-.login-html .sign-in-htm,
-.login-html .sign-up-htm {
+.login-html .sign-in-htm {
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   position: absolute;
-  transform: rotateY(180deg);
   backface-visibility: hidden;
   transition: all 0.4s linear;
 }
 .login-html .sign-in,
-.login-html .sign-up,
 .login-form .group .check {
   display: none;
 }
@@ -70,8 +67,7 @@ a {
   display: inline-block;
   border-bottom: 2px solid transparent;
 }
-.login-html .sign-in:checked + .tab,
-.login-html .sign-up:checked + .tab {
+.login-html .sign-in:checked + .tab {
   color: #fff;
   border-color: #1161ee;
 }
