--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -3,16 +3,26 @@ p {
 }
 
 h3 {
-  margin-top: 10rem;
-  margin-bottom: 10rem;
-  font-size: 2.5rem;
+  margin-top: 5rem;
+  margin-bottom: 20rem;
+  font-size: 3rem;
+  font-weight: 500;
 }
 
-.img {
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 100%;
-  max-height: 100%;
-  width: 100%;
+.person-wrapper {
+  margin-bottom: 0em;
+  margin-top: 3em;
+}
+
+.button {
+  background-color: #2892d7;
+  margin-bottom: 2em;
+}
+
+.buttonSearch {
+  background-color: #0f0be64d;
+}
+
+.profile-pic {
+  width: 50%;
 }
