--- a/src/Components/TutorSignIn.css
+++ b/src/Components/TutorSignIn.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   color: #6a6f8c;
-  background: #d3d0d0;
+  /* background: #d3d0d0; */
   font: 600 16px/18px "Open Sans", sans-serif;
 }
 *,
