--- a/src/Components/Tutor/TutorSignUp.css
+++ b/src/Components/Tutor/TutorSignUp.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   color: #6a6f8c;
-  background: #c8c8c8;
+  background: #f8f9fa;
   font: 600 16px/18px "Open Sans", sans-serif;
 }
 *,
