Log reg errors display

--- a/src/Components/Tutor/TutorSignUp.css
+++ b/src/Components/Tutor/TutorSignUp.css
@@ -27,7 +27,7 @@ a {
   width: 100%;
   margin: auto;
   max-width: 525px;
-  min-height: 1250px;
+  min-height: 1450px;
   position: relative;
   background: url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg)
     no-repeat center;
@@ -167,4 +167,8 @@ a {
 }
 .foot-lnk {
   text-align: center;
+}
+
+.error-display {
+  color: red;
 }
